// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mock render - default - value[0] - Progress 1`] = `mocked`;

exports[`Mock render - default - value[0] - Progress 2`] = `
Array [
  Array [
    Object {
      "gapDegree": undefined,
      "gapPosition": undefined,
      "id": "default",
      "percent": undefined,
      "showInfo": undefined,
      "status": undefined,
      "steps": undefined,
      "strokeColor": undefined,
      "strokeLinecap": undefined,
      "strokeWidth": undefined,
      "success": undefined,
      "trailColor": undefined,
      "type": undefined,
      "width": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.gapDegree: 60 - value[0] - Progress 1`] = `mocked`;

exports[`Mock render - properties.gapDegree: 60 - value[0] - Progress 2`] = `
Array [
  Array [
    Object {
      "gapDegree": 60,
      "gapPosition": undefined,
      "id": "properties.gapDegree: 60",
      "percent": 30,
      "showInfo": undefined,
      "status": undefined,
      "steps": undefined,
      "strokeColor": undefined,
      "strokeLinecap": undefined,
      "strokeWidth": undefined,
      "success": undefined,
      "trailColor": undefined,
      "type": "circle",
      "width": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.gapPosition: bottom - value[0] - Progress 1`] = `mocked`;

exports[`Mock render - properties.gapPosition: bottom - value[0] - Progress 2`] = `
Array [
  Array [
    Object {
      "gapDegree": 60,
      "gapPosition": "bottom",
      "id": "properties.gapPosition: bottom",
      "percent": 30,
      "showInfo": undefined,
      "status": undefined,
      "steps": undefined,
      "strokeColor": undefined,
      "strokeLinecap": undefined,
      "strokeWidth": undefined,
      "success": undefined,
      "trailColor": undefined,
      "type": "circle",
      "width": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.gapPosition: left - value[0] - Progress 1`] = `mocked`;

exports[`Mock render - properties.gapPosition: left - value[0] - Progress 2`] = `
Array [
  Array [
    Object {
      "gapDegree": 60,
      "gapPosition": "left",
      "id": "properties.gapPosition: left",
      "percent": 30,
      "showInfo": undefined,
      "status": undefined,
      "steps": undefined,
      "strokeColor": undefined,
      "strokeLinecap": undefined,
      "strokeWidth": undefined,
      "success": undefined,
      "trailColor": undefined,
      "type": "circle",
      "width": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.gapPosition: right - value[0] - Progress 1`] = `mocked`;

exports[`Mock render - properties.gapPosition: right - value[0] - Progress 2`] = `
Array [
  Array [
    Object {
      "gapDegree": 60,
      "gapPosition": "right",
      "id": "properties.gapPosition: right",
      "percent": 30,
      "showInfo": undefined,
      "status": undefined,
      "steps": undefined,
      "strokeColor": undefined,
      "strokeLinecap": undefined,
      "strokeWidth": undefined,
      "success": undefined,
      "trailColor": undefined,
      "type": "circle",
      "width": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.percent - value[0] - Progress 1`] = `mocked`;

exports[`Mock render - properties.percent - value[0] - Progress 2`] = `
Array [
  Array [
    Object {
      "gapDegree": undefined,
      "gapPosition": undefined,
      "id": "properties.percent",
      "percent": 30,
      "showInfo": undefined,
      "status": undefined,
      "steps": undefined,
      "strokeColor": undefined,
      "strokeLinecap": undefined,
      "strokeWidth": undefined,
      "success": undefined,
      "trailColor": undefined,
      "type": undefined,
      "width": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.showInfo: false - value[0] - Progress 1`] = `mocked`;

exports[`Mock render - properties.showInfo: false - value[0] - Progress 2`] = `
Array [
  Array [
    Object {
      "gapDegree": undefined,
      "gapPosition": undefined,
      "id": "properties.showInfo: false",
      "percent": 30,
      "showInfo": false,
      "status": undefined,
      "steps": undefined,
      "strokeColor": undefined,
      "strokeLinecap": undefined,
      "strokeWidth": undefined,
      "success": undefined,
      "trailColor": undefined,
      "type": undefined,
      "width": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.status: active - value[0] - Progress 1`] = `mocked`;

exports[`Mock render - properties.status: active - value[0] - Progress 2`] = `
Array [
  Array [
    Object {
      "gapDegree": undefined,
      "gapPosition": undefined,
      "id": "properties.status: active",
      "percent": 30,
      "showInfo": undefined,
      "status": "active",
      "steps": undefined,
      "strokeColor": undefined,
      "strokeLinecap": undefined,
      "strokeWidth": undefined,
      "success": undefined,
      "trailColor": undefined,
      "type": undefined,
      "width": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.status: exception - value[0] - Progress 1`] = `mocked`;

exports[`Mock render - properties.status: exception - value[0] - Progress 2`] = `
Array [
  Array [
    Object {
      "gapDegree": undefined,
      "gapPosition": undefined,
      "id": "properties.status: exception",
      "percent": 30,
      "showInfo": undefined,
      "status": "exception",
      "steps": undefined,
      "strokeColor": undefined,
      "strokeLinecap": undefined,
      "strokeWidth": undefined,
      "success": undefined,
      "trailColor": undefined,
      "type": undefined,
      "width": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.status: normal - value[0] - Progress 1`] = `mocked`;

exports[`Mock render - properties.status: normal - value[0] - Progress 2`] = `
Array [
  Array [
    Object {
      "gapDegree": undefined,
      "gapPosition": undefined,
      "id": "properties.status: normal",
      "percent": 30,
      "showInfo": undefined,
      "status": "normal",
      "steps": undefined,
      "strokeColor": undefined,
      "strokeLinecap": undefined,
      "strokeWidth": undefined,
      "success": undefined,
      "trailColor": undefined,
      "type": undefined,
      "width": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.status: success - value[0] - Progress 1`] = `mocked`;

exports[`Mock render - properties.status: success - value[0] - Progress 2`] = `
Array [
  Array [
    Object {
      "gapDegree": undefined,
      "gapPosition": undefined,
      "id": "properties.status: success",
      "percent": 30,
      "showInfo": undefined,
      "status": "success",
      "steps": undefined,
      "strokeColor": undefined,
      "strokeLinecap": undefined,
      "strokeWidth": undefined,
      "success": undefined,
      "trailColor": undefined,
      "type": undefined,
      "width": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.strokeColor: '#e91e63'  trailColor: '#ff9800' - value[0] - Progress 1`] = `mocked`;

exports[`Mock render - properties.strokeColor: '#e91e63'  trailColor: '#ff9800' - value[0] - Progress 2`] = `
Array [
  Array [
    Object {
      "gapDegree": undefined,
      "gapPosition": undefined,
      "id": "properties.strokeColor: '#e91e63'  trailColor: '#ff9800'",
      "percent": 30,
      "showInfo": undefined,
      "status": undefined,
      "steps": undefined,
      "strokeColor": "#e91e63",
      "strokeLinecap": undefined,
      "strokeWidth": undefined,
      "success": undefined,
      "trailColor": "#ff9800",
      "type": undefined,
      "width": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.strokeColor: '#e91e63' - value[0] - Progress 1`] = `mocked`;

exports[`Mock render - properties.strokeColor: '#e91e63' - value[0] - Progress 2`] = `
Array [
  Array [
    Object {
      "gapDegree": undefined,
      "gapPosition": undefined,
      "id": "properties.strokeColor: '#e91e63'",
      "percent": 30,
      "showInfo": undefined,
      "status": undefined,
      "steps": undefined,
      "strokeColor": "#e91e63",
      "strokeLinecap": undefined,
      "strokeWidth": undefined,
      "success": undefined,
      "trailColor": undefined,
      "type": undefined,
      "width": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.strokeLinecap: square  - value[0] - Progress 1`] = `mocked`;

exports[`Mock render - properties.strokeLinecap: square  - value[0] - Progress 2`] = `
Array [
  Array [
    Object {
      "gapDegree": undefined,
      "gapPosition": undefined,
      "id": "properties.strokeLinecap: square ",
      "percent": 30,
      "showInfo": undefined,
      "status": undefined,
      "steps": undefined,
      "strokeColor": undefined,
      "strokeLinecap": "square",
      "strokeWidth": undefined,
      "success": undefined,
      "trailColor": undefined,
      "type": undefined,
      "width": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.strokeWidth: 18 - value[0] - Progress 1`] = `mocked`;

exports[`Mock render - properties.strokeWidth: 18 - value[0] - Progress 2`] = `
Array [
  Array [
    Object {
      "gapDegree": undefined,
      "gapPosition": undefined,
      "id": "properties.strokeWidth: 18",
      "percent": 30,
      "showInfo": undefined,
      "status": undefined,
      "steps": undefined,
      "strokeColor": undefined,
      "strokeLinecap": undefined,
      "strokeWidth": 18,
      "success": undefined,
      "trailColor": undefined,
      "type": undefined,
      "width": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.trailColor: '#ff9800' - value[0] - Progress 1`] = `mocked`;

exports[`Mock render - properties.trailColor: '#ff9800' - value[0] - Progress 2`] = `
Array [
  Array [
    Object {
      "gapDegree": undefined,
      "gapPosition": undefined,
      "id": "properties.trailColor: '#ff9800'",
      "percent": 30,
      "showInfo": undefined,
      "status": undefined,
      "steps": undefined,
      "strokeColor": undefined,
      "strokeLinecap": undefined,
      "strokeWidth": undefined,
      "success": undefined,
      "trailColor": "#ff9800",
      "type": undefined,
      "width": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.type: circle - value[0] - Progress 1`] = `mocked`;

exports[`Mock render - properties.type: circle - value[0] - Progress 2`] = `
Array [
  Array [
    Object {
      "gapDegree": undefined,
      "gapPosition": undefined,
      "id": "properties.type: circle",
      "percent": 30,
      "showInfo": undefined,
      "status": undefined,
      "steps": undefined,
      "strokeColor": undefined,
      "strokeLinecap": undefined,
      "strokeWidth": undefined,
      "success": undefined,
      "trailColor": undefined,
      "type": "circle",
      "width": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.type: dashboard - value[0] - Progress 1`] = `mocked`;

exports[`Mock render - properties.type: dashboard - value[0] - Progress 2`] = `
Array [
  Array [
    Object {
      "gapDegree": undefined,
      "gapPosition": undefined,
      "id": "properties.type: dashboard",
      "percent": 30,
      "showInfo": undefined,
      "status": undefined,
      "steps": undefined,
      "strokeColor": undefined,
      "strokeLinecap": undefined,
      "strokeWidth": undefined,
      "success": undefined,
      "trailColor": undefined,
      "type": "dashboard",
      "width": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.width: 180 - value[0] - Progress 1`] = `mocked`;

exports[`Mock render - properties.width: 180 - value[0] - Progress 2`] = `
Array [
  Array [
    Object {
      "gapDegree": undefined,
      "gapPosition": undefined,
      "id": "properties.width: 180",
      "percent": 30,
      "showInfo": undefined,
      "status": undefined,
      "steps": undefined,
      "strokeColor": undefined,
      "strokeLinecap": undefined,
      "strokeWidth": undefined,
      "success": undefined,
      "trailColor": undefined,
      "type": "circle",
      "width": 180,
    },
    Object {},
  ],
]
`;
